fix gun alignment

--- a/frontend/src/views/PlayerView.css
+++ b/frontend/src/views/PlayerView.css
@@ -1,6 +1,7 @@
 .player-wrapper {
     position: fixed;
-    top: 0; left: 0;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     overflow: hidden;
@@ -11,12 +12,13 @@
     justify-content: center; */
 }
 
-
-
 .player-video,
 .player-canvas {
     position: absolute;
-    top: 0; left: 0; right: 0; bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -25,8 +27,8 @@
 }
 
 .player-canvas {
-  z-index: 2; /* On top of video */
-  pointer-events: none; /* Let clicks pass through */
+    z-index: 2; /* On top of video */
+    pointer-events: none; /* Let clicks pass through */
 }
 
 .shoot-button {
@@ -62,7 +64,7 @@
     height: 250px;
     position: fixed;
     bottom: 0;
-    left: 50%;
+    left: calc(50% - 15px);
     transform: translateX(-50%);
     margin-bottom: -18px;
     z-index: 10;
@@ -73,7 +75,7 @@
 .shoot-particle {
     position: absolute;
     top: 80%;
-    left: calc(50% + 15px);
+    left: 50%;
     width: 8px;
     height: 50px;
     background: purple;
